--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.8",
-    "react": "^18",
-    "react-dom": "^18"
+    "next": "^15.2.4",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@pandacss/dev": "^0.53.3",
     "@pandacss/eslint-plugin": "^0.2.8",
     "@types/node": "^22.5.4",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18",
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.1",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.8",
     "typescript": "^5.5.4"
